# scicom_playground

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  Makefile  README.md  vcpkg.json
cmake/: CppCheck.cmake  Doxygen.cmake  Format.cmake  GetBlaze.cmake  GetEigen.cmake  GetGLFW.cmake  GetMatplotPlusPlus.cmake  GetOpenCV.cmake  Memcheck.cmake  NoInSourceBuilds.cmake  Testing.cmake  opencv_install.py
src/: CMakeLists.txt
src/playground/: CMakeLists.txt  blaze.cpp  eigen.cpp  matplot.cpp  opencv.cpp
src/playground/include/playground/: blaze.hpp  eigen.hpp  matplot.hpp
src/playground_app/: CMakeLists.txt  gui_manager.cpp  main.cpp
src/playground_app/include/: gui_manager.hpp
tests/: CMakeLists.txt
tests/playground/: CMakeLists.txt  test-1.cpp
